# Reporter

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
reporter/: app.py  consts.py
reporter/model/: report_models.py  stat_models.py
reporter/reports/: changelog_report.py  release_report.py  stat_report.py  test_report.py
reporter/utils/: gitlab_client.py  label_map.py  report_processing.py  stat_processing.py
